fix bug with ios overflow

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,8 @@
 html, body {
     background-color: #f0f2f5;
+    overflow: hidden;
 }
+
 
 @media screen and (-webkit-min-device-pixel-ratio:0) { 
     select,
